<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="dialog"
            type="com.a3xh1.basecore.customview.dialog.AddressSelectorDialog"/>
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/white">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:text="@string/cancel"
                android:onClick="@{()->dialog.cancel()}"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/choose_city"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/btnSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:onClick="@{()->dialog.choose()}"
                android:layout_marginEnd="15dp"
                android:text="@string/choose"
                android:textColor="@color/colorPrimary" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="49dp"
            android:background="@color/lineGray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <com.a3xh1.basecore.customview.WheelView
                android:id="@+id/proviceWheel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                app:itemNumber="5"
                app:lineColor="@color/colorPrimary"
                app:maskHeight="32dp"
                app:noEmpty="true"
                app:normalTextColor="@color/textGrayColor"
                app:normalTextSize="13sp"
                app:selectedTextColor="#ff000000"
                app:selectedTextSize="16sp"
                app:unitHeight="40dp" />

            <com.a3xh1.basecore.customview.WheelView
                android:id="@+id/cityWheel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                app:itemNumber="5"
                app:lineColor="@color/colorPrimary"
                app:maskHeight="32dp"
                app:noEmpty="true"
                app:normalTextColor="@color/textGrayColor"
                app:normalTextSize="13sp"
                app:selectedTextColor="#ff000000"
                app:selectedTextSize="16sp"
                app:unitHeight="40dp" />

            <com.a3xh1.basecore.customview.WheelView
                android:id="@+id/areaWheel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/white"
                app:itemNumber="5"
                app:lineColor="@color/colorPrimary"
                app:maskHeight="32dp"
                app:noEmpty="true"
                app:normalTextColor="@color/textGrayColor"
                app:normalTextSize="13sp"
                app:selectedTextColor="#ff000000"
                app:selectedTextSize="16sp"
                app:unitHeight="40dp" />
        </LinearLayout>
    </RelativeLayout>
</layout>